# light-csv

./: .gitignore  CMakeLists.txt  README.md
include/: light-csv  light-csv.hpp
include/internal/: csv-line-reader.hpp
include/light-csv/: cell.hpp  csv-line-reader.cpp  csv-line-reader.hpp  file.hpp  header.hpp  row.hpp
include/light-csv_bits/: cell.hpp  file.hpp  row.hpp
src/: cell.cpp  csv-line-reader.cpp  file.cpp  header.cpp  row.cpp
test/: test.cpp
test/files/: numbers.csv
